--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 strip = true
 
 [dependencies]
+anyhow = "1.0.95"
 serde_yaml = "0.9.34"
 serde_with = "3.12.0"
 pretty_env_logger = "0.5.0"
